chore: Remove console.log statements and update sign-in component button disable logic

--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -412,7 +412,9 @@
                             ></app-editar-estudiante>
                         } @case("regitrar-estudiantes"){
                         <app-registrar-estudiantes [unidadIdSeleccionada]="selectedUnity"
-                            [seccionIdSeleccionada]="selectedSection"></app-registrar-estudiantes>
+                            [aulaIdSeleccionada]="selectedSection"
+                            (itemsChange)="changeItems($event)"
+                            ></app-registrar-estudiantes>
                         }
                         }
                     </div>
