chore: Remove unused code related to student service and asignar-estudiantes component

--- a/angular.client/src/app/layout/layouts/horizontal/modern/modern.component.html
+++ b/angular.client/src/app/layout/layouts/horizontal/modern/modern.component.html
@@ -25,13 +25,11 @@
             <!-- Logo -->
             <div class="flex items-center mx-2 lg:mr-8">
                 <div class="hidden lg:flex">
-                    <img class="dark:hidden w-full max-w-xs h-auto scale-75"
-                        src="assets/images/logo/logo-app.webp">
+                    <img class="dark:hidden w-full max-w-xs h-auto scale-75" src="assets/images/logo/logo-app.webp">
                     <img class="hidden dark:flex w-full max-w-xs h-auto scale-75"
                         src="assets/images/logo/logo-app.webp">
                 </div>
-                <img class="flex lg:hidden w-full max-w-xs h-auto scale-75"
-                    src="assets/images/logo/logo-app.webp">
+                <img class="flex lg:hidden w-full max-w-xs h-auto scale-75" src="assets/images/logo/logo-app.webp">
             </div>
             <!-- Horizontal navigation -->
             <fuse-horizontal-navigation class="mr-2" [name]="'mainNavigation'"
@@ -57,8 +55,6 @@
     </div>
 
     <!-- Footer -->
-    <div
-        class="relative flex flex-0 items-center w-full h-7 sm:h-10 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden">
-    </div>
+
 
 </div>
