--- a/angular.client/src/app/modules/admin/classrooms/components/registrar-estudiantes/registrar-estudiantes.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/registrar-estudiantes/registrar-estudiantes.component.html
@@ -17,12 +17,12 @@
                                 <mat-icon aria-hidden="false" aria-label="Example home icon"
                                     fontIcon="upload_file"></mat-icon>
                             </button>
-                            <button mat-button class="flex items-center" (click)="descargarPlantilla()">
+                            <button mat-button class="flex items-center ml-4" (click)="descargarPlantilla()">
                                 Descargar Plantilla
                                 <mat-icon aria-hidden="false" aria-label="Example home icon"
                                     fontIcon="description"></mat-icon>
                             </button>
-                            <button mat-button class="flex items-center" (click)="limpiarRegistrosFormulario()">
+                            <button mat-button class="flex items-center ml-4" (click)="limpiarRegistrosFormulario()">
                                 Limpiar registros
                                 <mat-icon aria-hidden="false" aria-label="Example home icon"
                                     fontIcon="history"></mat-icon>
