--- a/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
@@ -1,37 +1,59 @@
-<mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-    <mat-button-toggle value="bold">Bold</mat-button-toggle>
-    <mat-button-toggle value="italic">Italic</mat-button-toggle>
-    <mat-button-toggle value="underline">Underline</mat-button-toggle>
-</mat-button-toggle-group>
+<div class="flex h-10 w-min mb-4 overflow-hidden shadow-md rounded-full font-normal">
+    @for (button of botonesDimensiones; track button) {
+    <button (click)="button.accion()" [ngClass]="getButtonClassDimension(button)"
+        class="w-max px-6 py-2 transition-all duration-200 ease-in-out">
+        {{ button.texto }}
+    </button>
+    }
+</div>
 
-@if (reporteSalon.data.length == 0 && this.evaluacionPsicologicaAulaId) {
-<div class="max-w-md mx-auto bg-orange-100 border-orange-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl m-4">
+@if(!filtrosSeleccionados.succeeded){
+<div class="mx-auto bg-blue-100 border-blue-500 rounded-xl shadow-md overflow-hidden m-4">
     <div class="md:flex">
         <div class="p-8">
-            <div class="uppercase tracking-wide text-sm text-orange-500 font-semibold">Información</div>
-            <p class="mt-2 text-gray-500 font-bold">
-                Nadie ha realizado un test psicologico.
+            <div class="uppercase tracking-wide text-lg text-blue-500 font-semibold">Información</div>
+            <p class="mt-2 text-gray-700 font-bold text-lg">
+                Seleccione
+                {{
+                (!this.filtrosSeleccionados.Unidad ? 'una unidad, ' : '') +
+                (!this.filtrosSeleccionados.Grado) +
+                (!this.filtrosSeleccionados.Seccion ? 'una sección. ' : '')
+                }}.
             </p>
         </div>
     </div>
 </div>
 }
-
-
-@else if(reporteSalon.data.length > 0){
-<div class="xl:col-span-2 flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
-    <div class="p-6">
-        <div class="mr-4 text-lg font-medium tracking-tight leading-6 truncate"> Estudiantes que realizaron
-            el test psicologico</div>
-        <div class="text-secondary font-medium flex row">
-            <p>En total hay {{this.reporteSalon.data.length}} estudiantes,&nbsp; </p>
-            <p class="text-green-700"> {{getEstudiantesPorEstado('F')}} terminaron,&nbsp;</p>
-            <p class="text-orange-400">{{getEstudiantesPorEstado('P')}} estan desarrollando,&nbsp; </p>
-            <p class="text-gray-400"> {{getEstudiantesPorEstado('N')}} no comenzaron. </p>
+@else if (reporteSalonFiltrado.data?.length == 0) {
+<div class="max-w-md mx-auto bg-orange-100 border-orange-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl m-4">
+    <div class="md:flex">
+        <div class="p-8">
+            <div class="uppercase tracking-wide text-sm text-orange-500 font-semibold">Información</div>
+            <p class="mt-2 text-gray-500 font-bold">
+                Ningun test psicologico realizado.
+            </p>
         </div>
     </div>
-    <div class="overflow-x-auto mx-6" (click)="this.reporteSalon.sort = this.estudiantesTableMatSort">
-        <table mat-table [dataSource]="reporteSalon" matSort #estudiantesTable class="mat-elevation-z8">
+</div>
+}
+@else if(reporteSalonFiltrado.data?.length > 0){
+<div class="xl:col-span-2 flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
+    <div class="p-6">
+        <div class="mr-4 text-lg font-medium tracking-tight leading-6 truncate">
+            <b>Resultados de los estudiantes</b>
+        </div>
+
+        <div class="flex h-10 w-min mt-4 overflow-hidden shadow-md rounded-full font-normal">
+            @for (button of botonesEstadosVisibles; track button) {
+            <button (click)="button.accion()" [ngClass]="getButtonClassEstado(button)"
+                class="w-max px-6 py-2 transition-all duration-200 ease-in-out">
+                {{ button.texto }}
+            </button>
+            }
+        </div>
+    </div>
+    <div class="overflow-x-auto mx-6" (click)="this.reporteSalonFiltrado.sort = this.estudiantesTableMatSort">
+        <table mat-table [dataSource]="reporteSalonFiltrado" matSort #estudiantesTable class="mat-elevation-z8">
 
             <!-- Nombre Column -->
             <ng-container matColumnDef="nombre">
@@ -65,8 +87,14 @@
             </ng-container>
             <!-- Promedio Column -->
             <ng-container matColumnDef="promedio">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Promedio</th>
-                <td mat-cell *matCellDef="let element"> {{element.promedio | number:'1.1-1'}} </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Resultado</th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase"
+                        [ngClass]="obtenerClasePorPuntajeReporteEstudiante(element.promedio)">
+                        {{obtenerCategoriaPorPuntajeReporteEstudiante(element.promedio)}}
+                        ({{element.promedio | number:'1.1-1'}})
+                    </div>
+                </td>
             </ng-container>
             <ng-container matColumnDef="opciones">
                 <th mat-header-cell *matHeaderCellDef>Opciones</th>
