--- a/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/components/reporte-salon/reporte-salon.component.html
@@ -68,7 +68,9 @@
 
             <!-- Estado Evaluacion Estudiante Column -->
             <ng-container matColumnDef="estadoEvaluacionEstudiante">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado Evaluacion</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Estado evaluacion
+                </th>
                 <td mat-cell *matCellDef="let element">
                     <span
                         class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase"
